# timere

./: .gitattributes  .gitignore  .ocamlformat  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dune-project  index.html  publish-timedesc.sh  publish-timere.sh  start-container-timedesc.sh  start-container-timere-fuzz.sh  start-container-timere.sh  start-container.sh  timedesc-json.opam  timedesc-sexp.opam  timedesc-tzdb.opam  timedesc-tzlocal-js.opam  timedesc-tzlocal.opam  timedesc.opam  timere-parse.opam  timere.opam
debug/: dune  main.ml
debug-parse/: dune  main.ml
desc/: ISO8601.ml  ISO8601_parsers.ml  ISO8601_printers.ml  ISO_week.ml  RFC3339.ml  bigarray_utils.ml  constants.ml  date.ml  date.mli  date_time.ml  date_time_components.ml  date_time_utils.ml  dune  iSO_week.ml  int64_set.ml  int64_utils.ml  int_set.ml  misc_utils.ml  of_sexp.ml  of_sexp_utils.ml  parser_components.ml  printers.ml  ptime_utils.ml  seq_utils_.ml  span.ml  span.mli  string_map.ml  string_set.ml  time.ml  time.mli  time_zone.ml  time_zone.mli  time_zone_info.ml  time_zone_utils.ml  timedesc.ml  timedesc.mli  timedesc.mli.old  to_sexp.ml  to_sexp_utils.ml  ym.ml
desc-tests/: ISO_week_tests.ml  builder.ml  date_tests.ml  date_time_tests.ml  dune  int64_set.ml  main.ml  ptime_tests.ml  span_tests.ml  test_utils.ml  time_tests.ml  time_zone_tests.ml  tzdb_tests.ml  ym_tests.ml
export-js-tzdb-full/: core.ml  dune  export.ml  export_all.ml  main.ml
export-js-tzdb-none/: dune
fuzz/: Dockerfile  after_completeness.ml  after_empty.ml  after_is_complete.ml  after_is_sound.ml  after_soundness.ml  between_exc_completeness.ml  between_exc_empty.ml  between_exc_is_complete.ml  between_exc_is_sound.ml  between_exc_soundness.ml  between_inc_completeness.ml  between_inc_empty.ml  between_inc_is_complete.ml  between_inc_is_sound.ml  between_inc_soundness.ml  bounded_intervals_empty.ml  bounded_intervals_is_complete.ml  bounded_intervals_is_sound.ml  clean.sh  dune  follow_empty.ml  follow_is_complete.ml  follow_is_sound.ml  fuzz_utils.ml  inter_is_sound_and_complete.ml  inter_order_does_not_matter.ml  list.sh  of_sexp_string_does_not_crash.ml  pattern_intervals_empty.ml  pattern_intervals_is_complete.ml  pattern_intervals_is_sound.ml  pattern_resolution_is_complete.ml  pattern_resolution_is_sound.ml  resolver_is_same_as_simple_resolver.ml  run.sh  run_all.sh  setup.sh  simple_resolver.ml  span_set.ml  (+4 more)
gen-build/: dune  gen_tzdb_compressed.ml  gen_tzdb_full.ml
parse/: cases.txt  dune  parser.ml  timere_parse.ml  timere_parse.mli
src/: ISO8601.ml  RFC3339.ml  bigarray_utils.ml  builder.ml  constants.ml  date_components.ml  date_time.ml  date_time_components.ml  dune  duration.ml  infix.ml  int64_map.ml  int64_set.ml  int64_utils.ml  int_set.ml  misc_utils.ml  of_sexp.ml  parser.ml  parser_components.ml  pattern.ml  pattern.mli  pattern_resolver.ml  points.ml  printer.ml  printers.ml  ptime_utils.ml  range.ml  range.mli  range_small.ml  range_small.mli  range_utils.ml  ranges.ml  ranges.mli  ranges_small.ml  ranges_small.mli  resolver.ml  search_param.ml  search_param.mli  seq_utils.ml  simple_resolver.ml  (+19 more)
tests/: builder.ml  date_time_tests.ml  dune  duration_tests.ml  main.ml  range.ml  resolver_simple.ml  resolver_tests.ml  simple_resolver.ml  span_tests.ml  test_utils.ml  time_intervals_tests.ml  time_tests.ml  time_zone_tests.ml  tzdb_json_tests.ml  tzdb_tests.ml
timedesc/: ISO8601_parsers.ml  ISO_week.ml  RFC3339.ml  RFC5322.ml  RFC9110_parsers.ml  RFC9110_printers.ml  array_utils.ml  date.ml  date_time.ml  date_time_utils.ml  direct_parser_components.ml  dune  index.html  int_set.ml  misc_utils.ml  of_sexp.ml  of_sexp_utils.ml  parser_components.ml  printers.ml  seq_utils_.ml  span.ml  string_map.ml  time.mli  time_zone.ml  time_zone.mli  time_zone_info.ml  time_zone_utils.ml  timedesc.ml  timedesc.mli  to_sexp.ml
timedesc-json/: dune  index.html  timedesc_json.mli
timedesc-json/Timedesc_json/: index.html
timedesc-sexp/: dune  index.html  of_sexp.ml  of_sexp_utils.ml  timedesc_sexp.ml  timedesc_sexp.mli  to_sexp.ml  to_sexp_utils.ml
timedesc-sexp/Timedesc_sexp/: index.html
timedesc-tests/: date_tests.ml  date_time_tests.ml  date_time_util_tests.ml  dune  interval_tests.ml  main.ml  ptime_tests.ml  span_tests.ml  test_utils.ml  time_tests.ml  time_zone_tests.ml  tzdb_tests.ml
timedesc-tzdb/full/: dune
timedesc-tzlocal/unix-or-utc/: dune  timedesc_tzlocal.ml
timedesc/Timedesc/: index.html
timedesc/Timedesc__/: index.html
timedesc/Timedesc__Bigarray_utils/: index.html
timedesc/Timedesc__Constants/: index.html
timedesc/Timedesc__Date/: index.html
timedesc/Timedesc__Date_time/: index.html
timedesc/Timedesc__Date_time_components/: index.html
timedesc/Timedesc__Date_time_utils/: index.html
timedesc/Timedesc__ISO8601/: index.html
timedesc/Timedesc__ISO8601_parsers/: index.html
timedesc/Timedesc__ISO8601_printers/: index.html
timedesc/Timedesc__ISO_week/: index.html
timedesc/Timedesc__Int64_set/: index.html
timedesc/Timedesc__Int64_utils/: index.html
timedesc/Timedesc__Int_set/: index.html
timedesc/Timedesc__Misc_utils/: index.html
timedesc/Timedesc__Of_sexp/: index.html
timedesc/Timedesc__Of_sexp_utils/: index.html
timedesc/Timedesc__Parser_components/: index.html
timedesc/Timedesc__Printers/: index.html
timedesc/Timedesc__Ptime_utils/: index.html
timedesc/Timedesc__RFC3339/: index.html
timedesc/Timedesc__Span/: index.html
timedesc/Timedesc__String_map/: index.html
timedesc/Timedesc__Time/: index.html
timedesc/Timedesc__Time_zone/: index.html
timedesc/Timedesc__Time_zone_constants/: index.html
timedesc/Timedesc__Time_zone_info/: index.html
timedesc/Timedesc__Time_zone_utils/: index.html
timere/: dune  index.html  infix.ml  of_sexp.ml  pattern_resolver.ml  points.ml  printers.ml  resolver.ml  time.ml  time_ast.ml  timere.ml  timere.mli  to_sexp.ml
timere-parse/: dune  index.html  parser.ml  parser_components.ml
timere-tests/: builder.ml  dune  time_intervals_tests.ml
tzdb-full/: dune  timedesc_tzdb.ml  timere_tzdb.ml
(+1220 files in other folders)
