opam-version: "2.0"
synopsis: "JS implementation for timedesc-tzlocal"
description: """
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/timere"
bug-reports: "https://github.com/daypack-dev/timere/issues"
dev-repo: "git+https://github.com/daypack-dev/timere"
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "2.7.0"}
  "timedesc-tzlocal"
  "js_of_ocaml" {>= "4.0.0"}
  "js_of_ocaml-ppx"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

