opam-version: "2.0"
synopsis: "Timere natural language parsing component"
description: """
(WIP) Facilities for parsing natural language expressions into

- Timere objects

- Date time

- Hour minute second

- Duration
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/timere"
bug-reports: "https://github.com/daypack-dev/timere/issues"
dev-repo: "git+https://github.com/daypack-dev/timere"
depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "2.7.0"}
  "oseq"
  "ptime"
  "timere" {>= "0.1.6"}
  "re"
  "mparser"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
