opam-version: "2.0"
synopsis: "OCaml date time and duration natural language parsing library"
description: """
(WIP) Facilities for parsing natural language expressions into

- Timere objects

- Date time

- Hour minute second

- Duration
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/timere"
bug-reports: "https://github.com/daypack-dev/timere/issues"
dev-repo: "git+https://github.com/daypack-dev/timere"
depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "2.7.0"}
  "oseq" {>= "0.3"}
  "re" {>= "1.9.0"}
  "timedesc" {>= "0.6.0"}
  "timere" {>= "0.6.0"}
  "mparser" {>= "1.2.3"}
  "containers" {>= "3.6"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
