opam-version: "2.0"
synopsis: "OCaml time handling and reasoning library with platform independent time zone support and NLP-style parsing"
description: """
Timere provides facilities for handling timestamp and date time with time zone support,
and reasoning over time intervals, e.g. union, intersect, relative complement
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/timere"
bug-reports: "https://github.com/daypack-dev/timere/issues"
dev-repo: "git+https://github.com/daypack-dev/timere"
depends: [
  "ocaml" {>= "4.06.1"}
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" {>= "1.11.0"}
  "oseq"
  "seq"
  "mparser"
  "containers" {>= "3.0"}
  "ptime"
  "yojson"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
