opam-version: "2.0"
synopsis: "OCaml date time reasoning library"
description: """
Features:

- Reasoning over time intervals via `timere` objects/expressions, examples:

  - Pattern matching time and intervals. These work across DST boundaries.
 
  - Intersection and union

  - Chunking at year or month boundary, or in fixed sizes

  - Evaluate (sub)expressions with a different time zone (e.g. intersection of 9am to 5pm of Sydney and 9am to 5pm of New York)
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/timere"
bug-reports: "https://github.com/daypack-dev/timere/issues"
dev-repo: "git+https://github.com/daypack-dev/timere"
depends: [
  "ocaml" {>= "4.06.1"}
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" {>= "2.7.0"}
  "oseq" {>= "0.3"}
  "seq"
  "containers" {>= "3.4"}
  "fmt"
  "timedesc" {>= "0.5.0"}
  "diet" {>= "0.4"}
  "crowbar" {with-test}
  "alcotest" {with-test}
  "qcheck-alcotest" {with-test}
  "qcheck" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
