(rule
 (targets parser.ml)
 (deps    ../timere-parse/parser.ml)
 (action  (copy %{deps} %{targets}))
)

(executable
   (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70-26@8" -g))
   (name main)
   (libraries 
            unix
            ptime
            oseq
            re
            mparser
            containers
            ptime.clock.os
            yojson
            timere
            timere-parse
   )
)
