(rule
 (targets infix.ml)
 (deps    ../src/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../desc/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets timestamp_utils.ml)
 (deps    ../src/timestamp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../src/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../src/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets points.ml)
 (deps    ../src/points.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../src/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../src/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../src/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_set.ml)
 (deps    ../tests/int64_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../src/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../src/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../src/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../src/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../desc/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets weekday_set.ml)
 (deps    ../src/weekday_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../src/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../src/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets span_set.ml)
 (deps    ../fuzz/span_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets span_set_utils.ml)
 (deps    ../fuzz/span_set_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets simple_resolver.ml)
 (deps    ../fuzz/simple_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets builder.ml)
 (deps    ../tests/builder.ml)
 (action  (copy %{deps} %{targets}))
)

(executable
   (flags     (-g -w "+a-4-9-29-37-40-42-44-48-50-32-26"))
   (name main)
   (libraries 
            unix
            ptime
            oseq
            re
            mparser
            containers
            ptime.clock.os
            yojson
            fmt
            bigarray
            fileutils
            diet
            crowbar
            timedesc
            timedesc.tzdb.full
            timedesc.tzlocal.unix
   )
)
