(test
 (flags     (-w "+a-4-9-29-40-42-44-48-32" -g))
 (name main)
 (libraries qcheck
            qcheck-alcotest
            alcotest
            ptime
            ptime.clock.os
            oseq
            seq
            mparser
            containers
            yojson
            fmt
            bigarray
            fileutils
            diet
            timedesc
            timedesc.tzdb.full
            timedesc.tzlocal.unix
            )
 )
