(rule
 (targets time_zone_constants.ml)
 (deps    ../gen-artifacts/time_zone_constants.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (alias  runtest)
 (action (run ../desc-tests/main.exe)))

(library
 (flags     (-w "+a-4-9-29-40-42-44-48@8"))
 (name timedesc)
 (public_name timedesc)
 (instrumentation (backend bisect_ppx))
 (libraries
            timedesc.tzdb
            timedesc.tzlocal
            unix
            ptime
            oseq
            mparser
            containers
            seq
            yojson
            fmt
            bigarray
            fileutils
 )
)
