(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8" -g))
 (names export export_all)
 (libraries js_of_ocaml
            js_of_ocaml-lwt
            timere
            timedesc-tzdb.full
            timedesc-tzlocal-js
            timere-parse
            yojson
            )
 (preprocess (pps js_of_ocaml-ppx lwt_ppx))
 ; (js_of_ocaml (flags --source-map --debug-info))
 (modes js))
