(rule
 (targets core.ml)
 (deps    ../export-js-tzdb-full/core.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets export.ml)
 (deps    ../export-js-tzdb-full/export.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets export_all.ml)
 (deps    ../export-js-tzdb-full/export_all.ml)
 (action  (copy %{deps} %{targets}))
)

(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30@8"))
 (names export export_all)
 (libraries js_of_ocaml js_of_ocaml-lwt timere timedesc.tzdb.none timere-parse)
 (preprocess (pps js_of_ocaml-ppx lwt_ppx))
 (js_of_ocaml (flags --source-map --debug-info))
 (modes js))
