(rule
 (targets time_zone_constants.ml)
 (deps    ../gen-artifacts/time_zone_constants.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets constants.ml)
 (deps    ../src/constants.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets infix.ml)
 (deps    ../src/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets date_time_components.ml)
 (deps    ../src/date_time_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../src/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp_utils.ml)
 (deps    ../src/to_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets bigarray_utils.ml)
 (deps    ../src/bigarray_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets ptime_utils.ml)
 (deps    ../src/ptime_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../src/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../src/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets points.ml)
 (deps    ../src/points.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../src/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../src/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets string_map.ml)
 (deps    ../src/string_map.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_zone.ml)
 (deps    ../src/time_zone.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../src/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../src/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../src/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets duration.ml)
 (deps    ../src/duration.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../src/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../src/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets printers.ml)
 (deps    ../src/printers.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../src/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../src/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_set.ml)
 (deps    ../tests/int64_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../src/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets simple_resolver.ml)
 (deps    ../tests/simple_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets builder.ml)
 (deps    ../tests/builder.ml)
 (action  (copy %{deps} %{targets}))
)

(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32" -g))
 (names     resolver_is_same_as_simple_resolver
            to_of_sexp
            of_sexp_string_does_not_crash
            bounded_intervals_empty
            bounded_intervals_is_sound
            bounded_intervals_is_complete
            union_is_sound_and_complete
            inter_is_sound_and_complete
            union_order_does_not_matter
            inter_order_does_not_matter
            pattern_resolution_is_sound
            pattern_resolution_is_complete
 )
 (libraries crowbar
            ptime
            ptime.clock.os
            oseq
            mparser
            containers
            re
            yojson
            fmt
            bigarray
            timere.tzdb.full
 )
 )
