(rule
 (targets time_zone_constants.ml)
 (deps    ../gen-artifacts/time_zone_constants.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets infix.ml)
 (deps    ../timere/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../timedesc/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets timestamp_utils.ml)
 (deps    ../timere/timestamp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../timere/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../timere/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets points.ml)
 (deps    ../timere/points.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../timere/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../timere/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../timedesc/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils_.ml)
 (deps    ../timere/seq_utils_.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../timere/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../timere/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../timere/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../timere/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets printers.ml)
 (deps    ../timere/printers.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../timedesc/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets weekday_set.ml)
 (deps    ../timere/weekday_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../timere/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_set.ml)
 (deps    ../timere-tests/int64_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../timere/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets builder.ml)
 (deps    ../timere-tests/builder.ml)
 (action  (copy %{deps} %{targets}))
)

(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8"))
 (names     resolver_is_same_as_simple_resolver
            to_of_sexp
            of_sexp_string_does_not_crash
            pattern_intervals_empty
            pattern_intervals_is_sound
            pattern_intervals_is_complete
            union_is_sound_and_complete
            inter_is_sound_and_complete
            union_order_does_not_matter
            inter_order_does_not_matter
            pattern_resolution_is_sound
            pattern_resolution_is_complete
 )
 (libraries crowbar
            ptime
            ptime.clock.os
            oseq
            mparser
            containers
            re
            yojson
            fmt
            bigarray
            fileutils
            diet
            timedesc
            timedesc-tzdb.full
            timedesc-tzlocal.unix
 )
 )
