(rule
 (targets time_zone_db.ml)
 (deps    ../gen-artifacts/time_zone_db.ml)
 (action  (copy %{deps} %{targets}))
)

(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30@8"))
 (names gen_tzdb_full
 )
 (libraries oseq
            re
            mparser
            containers
            fileutils
            ptime
            bigarray
            timere
            timere.tzdb.none
 )
)
