(rule
 (targets misc_utils.ml)
 (deps    ../src/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../src/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30@8"))
 (name timere_parse)
 (public_name timere-parse)
 (libraries mparser
            re
            timere
 )
)
