(rule
 (targets time_zone_constants.ml)
 (deps    ../gen-artifacts/time_zone_constants.ml)
 (action  (copy %{deps} %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50@8"))
 (name timere)
 (public_name timere)
 (libraries
            timere.tzdb
            timere.tzlocal
            unix
            ptime
            oseq
            mparser
            containers
            seq
            yojson
            fmt
            bigarray
            fileutils
 )
)
