(rule
 (targets int_set.ml)
 (deps    ../desc/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50@8"))
 (name timere)
 (public_name timere)
 (libraries
            timedesc
            unix
            ptime
            oseq
            mparser
            containers
            seq
            yojson
            fmt
            bigarray
            fileutils
 )
)
