(rule
 (targets int_set.ml)
 (deps    ../desc/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../desc/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../desc/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../desc/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (alias  runtest)
 (action (run ../tests/main.exe)))

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50@8"))
 (name timere)
 (public_name timere)
 (instrumentation (backend bisect_ppx))
 (libraries timedesc
            oseq
            containers
            seq
            fmt
            diet
 )
)
